[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Sprites/chapters/ch1/ch1-0.png" type="Texture" id=1]
[ext_resource path="res://assets/Sprites/chapters/ch4/ch4-0.png" type="Texture" id=2]
[ext_resource path="res://assets/Sprites/chapters/ch7/ch7-0.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/chapters/ch8/ch8-0.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprites/chapters/ch9/ch9-0.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprites/chapters/ch2/ch2-0.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprites/chapters/ch6/ch6-0.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprites/chapters/ch5/ch5-0.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprites/chapters/ch6/ch6-1.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprites/chapters/ch7/ch7-1.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprites/chapters/ch9/ch9-1.png" type="Texture" id=11]
[ext_resource path="res://assets/Sprites/chapters/ch8/ch8-1.png" type="Texture" id=12]
[ext_resource path="res://assets/Sprites/chapters/ch3/ch3-0.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprites/chapters/ch5/ch5-1.png" type="Texture" id=14]
[ext_resource path="res://assets/Sprites/chapters/ch4/ch4-1.png" type="Texture" id=15]
[ext_resource path="res://assets/Sprites/chapters/ch1/ch1-1.png" type="Texture" id=16]
[ext_resource path="res://assets/Sprites/chapters/ch2/ch2-1.png" type="Texture" id=17]
[ext_resource path="res://assets/Sprites/chapters/ch3/ch3-1.png" type="Texture" id=18]
[ext_resource path="res://assets/Objects/ChapterPopup.gd" type="Script" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 16 ) ],
"loop": true,
"name": "ch1",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 17 ) ],
"loop": true,
"name": "ch2",
"speed": 8.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 18 ) ],
"loop": true,
"name": "ch3",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 15 ) ],
"loop": true,
"name": "ch4",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 14 ) ],
"loop": true,
"name": "ch5",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "ch6",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "ch7",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 12 ) ],
"loop": true,
"name": "ch8",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 11 ) ],
"loop": true,
"name": "ch9",
"speed": 8.0
} ]

[node name="ChapterPopup" type="Node2D"]
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.667, 0.667 )
frames = SubResource( 1 )
animation = "ch1"
playing = true

[node name="StayTimer" type="Timer" parent="."]
one_shot = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="StayTimer" to="." method="_on_StayTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
